--- a/composer.json
+++ b/composer.json
@@ -34,44 +34,45 @@
         }
     ],
     "require": {
-        "php": "^8.3",
+        "php": "^8.4",
 
-        "symfony/framework-bundle": "^6.4 || ^7.0",
-        "symfony/dependency-injection": "^6.4 || ^7.0",
-        "symfony/http-kernel": "^6.4 || ^7.0",
-        "symfony/config": "^6.4 || ^7.0",
-        "symfony/console": "^6.4 || ^7.0",
-        "symfony/http-foundation": "^6.4 || ^7.0",
-        "symfony/process": "^6.4 || ^7.0",
-        "symfony/stopwatch": "^6.4 || ^7.0",
-        "symfony/event-dispatcher": "^6.4 || ^7.0",
-        "symfony/event-dispatcher-contracts": "^3.5",
+        "symfony/framework-bundle": "^7.4 || ^8.0",
+        "symfony/dependency-injection": "^7.4 || ^8.0",
+        "symfony/http-kernel": "^7.4 || ^8.0",
+        "symfony/config": "^7.4 || ^8.0.1",
+        "symfony/console": "^7.4 || ^8.0",
+        "symfony/http-foundation": "^7.4 || ^8.0",
+        "symfony/process": "^7.4 || ^8.0",
+        "symfony/stopwatch": "^7.4 || ^8.0",
+        "symfony/event-dispatcher": "^7.4 || ^8.0",
+        "symfony/event-dispatcher-contracts": "^3.6",
 
-        "doctrine/doctrine-bundle": "^2.13",
-        "doctrine/collections": "^2.2",
-        "doctrine/persistence": "^3.4 || ^4.0",
-        "doctrine/orm": "^2.20 || ^3.3",
-        "doctrine/dbal": "^3.9 || ^4.2",
+        "doctrine/doctrine-bundle": "^3.1",
+        "doctrine/collections": "^2.4",
+        "doctrine/persistence": "^4.1",
+        "doctrine/orm": "^3.5",
+        "doctrine/dbal": "^4.4",
 
         "psr/clock": "^1.0",
 
-        "dragonmantank/cron-expression": "^3.4",
-        "ramsey/collection": "^2.0"
+        "dragonmantank/cron-expression": "^3.6",
+        "ramsey/collection": "^2.1"
     },
     "require-dev":{
-        "shipmonk/composer-dependency-analyser": "^1.8",
-        "doctrine/coding-standard": "^12.0",
+        "shipmonk/composer-dependency-analyser": "^1.8.4",
+        "doctrine/coding-standard": "^14.0",
         "roave/security-advisories": "dev-latest",
-        "squizlabs/php_codesniffer": "^3.11",
-        "phpstan/phpstan": "^2.1",
-        "phpstan/phpstan-deprecation-rules": "^2.0",
-        "phpstan/phpstan-phpunit": "^2.0",
-        "phpstan/phpstan-strict-rules": "^2.0",
-        "phpstan/phpstan-symfony": "^2.0",
-        "phpstan/phpstan-doctrine": "^2.0",
-        "phpunit/phpunit": "^12.0",
-        "symfony/var-dumper": "^7.2",
-        "symfony/clock": "^7.2"
+        "squizlabs/php_codesniffer": "^4.0.1",
+        "phpstan/phpstan": "^2.1.33",
+        "phpstan/phpstan-deprecation-rules": "^2.0.3",
+        "phpstan/phpstan-phpunit": "^2.0.10",
+        "phpstan/phpstan-strict-rules": "^2.0.7",
+        "phpstan/phpstan-symfony": "^2.0.9",
+        "phpstan/phpstan-doctrine": "^2.0.12",
+        "phpunit/phpunit": "^12.5.3",
+        "dg/bypass-finals": "^1.9",
+        "symfony/var-dumper": "^8.0",
+        "symfony/clock": "^8.0"
     },
     "autoload": {
         "psr-4": {
